--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,23 @@ android.enableBuildScriptClasspathCheck=false
 android.useAndroidX=true
 kapt.use.worker.api=true
 kapt.include.compile.classpath=false
+
+GROUP=io.dyte.mediasoup
+VERSION_NAME=0.2.0
+
+POM_NAME=libmediasoup-android
+POM_DESCRIPTION=Mediasoup client for Android
+POM_INCEPTION_YEAR=2022
+POM_URL=https://github.com/dyte-in/sockrates-client-kmm
+
+POM_LICENSE_NAME=The Apache Software License, Version 2.0
+POM_LICENSE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENSE_DIST=repo
+
+POM_SCM_URL=https://github.com/dyte-in/libmediasoup-android
+POM_SCM_CONNECTION=scm:git:git://github.com/dyte-in/libmediasoup-android
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/dyte-in/libmediasoup-android
+
+POM_DEVELOPER_ID=dyte-in
+POM_DEVELOPER_NAME=Dyte Inc.
+POM_DEVELOPER_URL=https://github.com/dyte-in/
